# blog

./: .gitignore  README.md  docker-compose.yaml
server/: .devcontainer.json  Dockerfile  Makefile  cognito-id-pool.yml  cognito-user-pool.yml  dynamodb.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
server/myapp/: main.py  models.py  schemas.py  settings.py  views.py
server/sls-stack/: cognito-id-pool.yml  cognito-user-pool.yml  dynamodb.yml  functions.yml
web/: .eslintrc.json  Makefile  openapi.yml  package-lock.json  package.json
web/components/ColorToggle/: index.tsx
web/components/Error/: index.tsx
web/components/Header/: index.tsx
web/components/Home/: index.tsx
web/components/Loading/: index.tsx
web/components/Markdown/: index.tsx
web/components/MarkdownEditor/: index.tsx
web/components/Message/: index.tsx
web/components/Post/: index.tsx
web/context/: message.tsx
web/contexts/: blog.tsx  dataFetch.tsx  root.tsx
web/hooks/: useApi.ts  useBlogs.ts  useIsLoggedIn.ts
web/lib/: date-util.ts  fetcher.ts  getStatic.ts
web/openapi/: api.ts  base.ts  configuration.ts  index.ts
web/pages/: _app.tsx  index.tsx
web/pages/drafts/: create.tsx  editor.tsx
web/pages/posts/: [title].tsx
web/reducers/: blogList.ts  dataFetch.ts  root.ts
