[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiosqlite = "0.16.0"
appdirs = "1.4.4"
black = "20.8b1"
click = "7.1.2"
databases = "0.4.1"
fastapi = "0.61.2"
flake8 = "3.8.4"
h11 = "0.11.0"
mangum = "0.10.0"
mccabe = "0.6.1"
mypy-extensions = "0.4.3"
pathspec = "0.8.1"
pycodestyle = "2.6.0"
pydantic = "1.7.2"
pyflakes = "2.2.0"
regex = "2020.11.13"
SQLAlchemy = "1.3.20"
starlette = "0.13.6"
toml = "0.10.2"
typed-ast = "1.4.1"
typing-extensions = "3.7.4.3"
uvicorn = "0.12.2"
pynamodb = "^4.3.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
